# qfc-wallet-desktop

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
src/: App.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/pages/: Accounts.tsx  AddressBook.tsx  CreateWallet.tsx  History.tsx  Home.tsx  Receive.tsx  Send.tsx  Settings.tsx  Unlock.tsx
