[package]
name = "qfc-wallet-desktop"
version = "1.0.0"
description = "QFC Wallet Desktop App"
authors = ["QFC Team"]
edition = "2021"

[lib]
name = "qfc_wallet_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "qfc-wallet-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers = "2"
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
